x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

0.14.1
======

Release date:

Sat, 18 Oct 2025 21:14:00 +0300

New features:

Bug fixes:

* Fix incorrect check for pattern validity

0.14.0
======

Release date:

Fri, 17 Oct 2025 20:11:55 +0300

New features:

* Add a virtual keyboard to the instrument settings

* Improve track focus highlights

* Implement help dialog for shortcuts

* Make it possible to transpose selection by +6/-6 semitones

* Show text if no pitch bend automations added

* Show text if no MIDI CC automations added

Bug fixes:

* Fix graphical glitches due to not all patterns getting resized

Other:

* Optimize track resizing

* Don't scroll columns that are not visible
  - This greatly improves scrolling performance

* Change header font family to sans

0.13.0
======

Release date:

Mon, 06 Oct 2025 21:25:24 +0300

New features:

* Implement random velocity jitter in instrument settings

* Show track index in the track settings dialog

* Show track index in the track header tool tip

* Adjustable audio buffer size

* Adjustable track header font size

* Add tabs to track settings dialog

* Implement custom auto note-off offset
  - Auto note-off offset can be set per-instrument
  - Adds tabs to the track settings dialog

Bug fixes:

* Fix auto note-off offset calculation

* Fix binding loops in EditMidiCcAutomationsDelegate.qml

Other:

0.12.0
======

Release date:

Wed, 10 Sep 2025 21:27:00 +0300

New features:

* Experimental audio recoder
  - Just enable recording in `Settings => Audio` and Noteahead will record from the default
    audio source when the song starts and name the file according to active tracks

* Implement a note frequency dialog
  - Tools => Note Frequencies

* Improvements to column data selection
  - Allow selecting data across multiple columns (keyboard only for now)
  - Allow selecting data using the mouse

Bug fixes:

* Take transpose into account when playing live notes
