@@ -7,6 +7,8 @@ New features:
 
 Bug fixes:
 
+* Fix incorrect values in the delay calculator dialog
+
 Other:
 
 0.14.1
